k8s/dev/dev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: total-dev-ingress
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-northeast-2:596601390909:certificate/30f62fc0-4cb0-4201-990f-6ad487fa7240"
    alb.ingress.kubernetes.io/group.name: "main-alb-group"
    alb.ingress.kubernetes.io/group.order: "5"
    alb.ingress.kubernetes.io/healthcheck-protocol: "HTTP"
    alb.ingress.kubernetes.io/healthcheck-port: "traffic-port"
    alb.ingress.kubernetes.io/success-codes: "200-399"
    # 엑세스 로그 + 삭제 방지 비활성화 + 유휴 제한시간(예: 60초)
    alb.ingress.kubernetes.io/load-balancer-attributes: >-
      access_logs.s3.enabled=true,
      access_logs.s3.bucket=kurly-security-logs-ap-northeast-2,
      access_logs.s3.prefix=alb-logs,
      deletion_protection.enabled=false,
      idle_timeout.timeout_seconds=60
    alb.ingress.kubernetes.io/transforms.auth-service: >-
      [
        {
          "type": "url-rewrite",
          "urlRewriteConfig": {
            "rewrites": [
              { "regex": "^/api/v1/auth/v3/api-docs$", "replace": "/v3/api-docs" }
            ]
          }
        }
      ]

    alb.ingress.kubernetes.io/transforms.user-service: >-
      [
        {
          "type": "url-rewrite",
          "urlRewriteConfig": {
            "rewrites": [
              { "regex": "^/api/v1/users/v3/api-docs$", "replace": "/v3/api-docs" }
            ]
          }
        }
      ]

    alb.ingress.kubernetes.io/transforms.order-service: >-
      [
        {
          "type": "url-rewrite",
          "urlRewriteConfig": {
            "rewrites": [
              { "regex": "^/api/v1/orders/v3/api-docs$", "replace": "/v3/api-docs" }
            ]
          }
        }
      ]

    alb.ingress.kubernetes.io/transforms.payment-service: >-
      [
        {
          "type": "url-rewrite",
          "urlRewriteConfig": {
            "rewrites": [
              { "regex": "^/api/v1/payments/v3/api-docs$", "replace": "/v3/api-docs" }
            ]
          }
        }
      ]

    alb.ingress.kubernetes.io/transforms.product-service: >-
      [
        {
          "type": "url-rewrite",
          "urlRewriteConfig": {
            "rewrites": [
              { "regex": "^/api/v1/products/v3/api-docs$", "replace": "/v3/api-docs" }
            ]
          }
        }
      ]

    alb.ingress.kubernetes.io/transforms.oms-service: >-
      [
        {
          "type": "url-rewrite",
          "urlRewriteConfig": {
            "rewrites": [
              { "regex": "^/api/v1/admin/oms/v3/api-docs$", "replace": "/v3/api-docs" }
            ]
          }
        }
      ]

    alb.ingress.kubernetes.io/transforms.wms-service: >-
      [
        {
          "type": "url-rewrite",
          "urlRewriteConfig": {
            "rewrites": [
              { "regex": "^/api/v1/admin/wms/v3/api-docs$", "replace": "/v3/api-docs" }
            ]
          }
        }
      ]

    alb.ingress.kubernetes.io/transforms.scm-service: >-
      [
        {
          "type": "url-rewrite",
          "urlRewriteConfig": {
            "rewrites": [
              { "regex": "^/api/v1/admin/scm/v3/api-docs$", "replace": "/v3/api-docs" }
            ]
          }
        }
      ]
spec:
  ingressClassName: alb
  rules:
    - host: "dev.cloudyim.store"
      http:
        paths:
          # 1. 프론트엔드 라우팅 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: total-client
                port:
                  number: 80
          # 2. 백엔드 API 라우팅
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8080
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8080
          - path: /api/v1/orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8080
          - path: /api/v1/carts
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8080
          - path: /api/v1/payments
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 8080
          - path: /api/v1/products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 8080
          - path: /api/v1/admin/oms
            pathType: Prefix
            backend:
              service:
                name: oms-service
                port:
                  number: 8080
          - path: /api/v1/admin/wms
            pathType: Prefix
            backend:
              service:
                name: wms-service
                port:
                  number: 8080
          - path: /api/v1/admin/scm
            pathType: Prefix
            backend:
              service:
                name: scm-service
                port:
                  number: 8080
          # 스웨거 UI 라우팅
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: swagger-ui
                port:
                  number: 8080
