k8s/dev/frontend-ingress-dev.yaml
# DAST 점검용 ALB Ingress# k8s/dev/frontend-ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress-dev
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    # 운영과 ALB를 분리하거나 별도 관리하기 위한 그룹명
    alb.ingress.kubernetes.io/group.name: "dev-ingress-group"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend  # frontend service 이름
                port:
                  number: 3000
